refactor lint
