# apps/express-modular-architecture/src/modules/__template__/routes/index.js
@@ -2,15 +2,15 @@ const path = '/v1/tests';
 const router = require('express').Router();
 
 module.exports = () => {
-  router.get('/', (req, res, next) => {
-    /* #swagger.tags = ['__template'] */
-    res.status(200).json({
-      message: 'TEmp Swagger Docs',
+    router.get('/', (req, res, next) => {
+        /* #swagger.tags = ['__template'] */
+        res.status(200).json({
+            message: 'TEmp Swagger Docs'
+        });
     });
-  });
 
-  return {
-    path,
-    router,
-  };
+    return {
+        path,
+        router
+    };
 };
