# apps/express-modular-architecture/src/modules/authentication/models/User.model.js
@@ -1,28 +1,28 @@
 const { Schema, model } = require('mongoose');
 
 const modelSchema = new Schema(
-  {
-    name: {
-      type: String,
-      require: true,
-    },
-    email: {
-      type: String,
-      require: true,
-    },
+    {
+        name: {
+            type: String,
+            require: true
+        },
+        email: {
+            type: String,
+            require: true
+        },
 
-    password: {
-      type: String,
-      require: true,
+        password: {
+            type: String,
+            require: true
+        }
     },
-  },
-  { timestamps: true }
+    { timestamps: true }
 );
 
 modelSchema.methods.toJSON = function () {
-  var obj = this.toObject();
-  delete obj.password;
-  return obj;
+    var obj = this.toObject();
+    delete obj.password;
+    return obj;
 };
 
 module.exports = model('User', modelSchema);
